feat: implement all auth and users endpoints
